# externals

./: .gitignore  BUILD.md  CONTRIBUTING.md  Dockerfile  FLC.patch  LICENSE.md  Makefile  Makefile.targets  README.md  convert_hardlinks.py  cry.patch  download.sh  evtgen.patch  externals.py  fann.patch  fastbdt-relative-rootcling-headers.patch  geant4-gdml-strlen.patch  geant4-verbosity.patch  geant4.csh.add  geant4.patch  geant4.sed  geant4.sh.add  genfit.patch  neurobayes.patch  phokhara.patch  photos.patch  pip-requirements.txt  pkg-config  pythia.patch  python_relocate.py  rave-glibc2.3-isnan.patch  rave-silence-cout.patch  rave.patch  requirements-base.txt  requirements-core.in  requirements-core.sl6.txt  requirements-core.txt  requirements-root.in  requirements-root.txt  root-ClassImp-warning.patch  (+17 more)
genfit/: CMakeLists.txt  SConstruct
genfit/site_scons/: config.py
patches/: bazel-grpc-18950-rename-gettid.patch  binutils-27482-parallelbuild-libctf.patch  binutils-symbolversion.patch  cppcheck-2.19.0-relocatable-fixes.patch  cppcheck-Make-CppCheck-relocatable.patch  davix-disabletests.patch  davix-finduuid.patch  davix-fix-compilation.patch  davix-uuid-includepath.patch  eigen-installdir.patch  eos-hdf5dependency.patch  eos-nonstandardlocs.patch  epics-disable-perl.patch  evtgen-02-00-00-pythia8.304.patch  evtgen-02-00-00-remove-leak.patch  evtgen-02-00-01-BtoXsll.patch  evtgen-02-00-01-avoid-double-counting.patch  evtgen-BII-4471-emptyline.patch  evtgen.patch  evtgen.pdl-R01-07-00+BII-3296.patch  evtgen.pdl.patch  fastbdt-cint_to_cling.patch  fastbdt-gcc11.patch  (+62 more)
(+21 files in other folders)
